# neuramethyst

./: Cargo.toml  README.md
examples/: bivariate-forward.rs  bivariate.rs  convolution.rs  densenet-fwdfwd.rs  densenet.rs  forward-progressive.rs  generate-tests.rs  mnist-decoder.rs  mnist-diffusion.rs  xor.rs
src/: activation.rs  algebra.rs  axis.rs  err.rs  layer.rs  lib.rs  network.rs  optimize.rs  train.rs  utils.rs
src/algebra/: matrix.rs  mod.rs  vector.rs
src/derivable/: activation.rs  loss.rs  mod.rs  reduce.rs  regularize.rs
src/gradient_solver/: backprop.rs  forward_forward.rs  mod.rs
src/layer/: convolution.rs  dense.rs  dropout.rs  isolate.rs  lock.rs  mod.rs  normalize.rs  one_hot.rs  pool.rs  reshape.rs  softmax.rs
src/network/: mod.rs  sequential.rs  traits.rs
src/network/graph/: backprop.rs  from.rs  mod.rs  node.rs  partial.rs
src/network/residual/: axis.rs  construct.rs  input.rs  last.rs  layer_impl.rs  mod.rs  node.rs  wrapper.rs
src/network/sequential/: construct.rs  layer_impl.rs  lock.rs  mod.rs  tail.rs
src/old_layer/: convolution.rs  dense.rs  lock.rs  mod.rs  pool.rs  reshape.rs  softmax.rs
tests/: xor.json  xor.rs
