[package]
name = "neuramethyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
visualization = ["dep:image", "dep:viuer"]

[dependencies]
boxed-array = "0.1.0"
nalgebra = { version = "^0.32", features = ["std", "macros", "rand", "serde-serialize"] }
ndarray = "^0.15"
num = "^0.4"
# num-traits = "0.2.15"
rand = "^0.8"
rand_distr = "0.4.3"
textplots = "0.8.0"
image = { version = "0.24.6", optional = true }
viuer = { version = "0.6.2", optional = true }
dyn-clone = "1.0.11"

[dev-dependencies]
image = "0.24.6"
viuer = "0.6.2"
rust-mnist = "0.2.0"
serde_json = "1.0.96"
approx = "0.5.1"

[profile.release]
debug = true

[[example]]
name = "densenet"
required-features = ["visualization"]

[[example]]
name = "mnist-decoder"
required-features = ["visualization"]

[[example]]
name = "mnist-diffusion"
required-features = ["visualization"]
